--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   http: ^1.2.1
   json_annotation: ^4.8.1
   intl: ^0.19.0
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
