--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   json_annotation: ^4.8.1
   intl: ^0.19.0
   cached_network_image: ^3.3.1
+  redacted:
+    path: ./packages/redacted-1.0.12
 
 dev_dependencies:
   flutter_test:
