--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dev_dependencies:
   mockito: ^5.4.4
   build_runner: ^2.4.9
   json_serializable: ^6.7.1
+  mocktail: ^1.0.3
 
 flutter:
   uses-material-design: true
